--- a/DaskDataFrame.ipynb
+++ b/DaskDataFrame.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "572b1faf",
+   "id": "833d3513",
    "metadata": {},
    "source": [
     "# Dask.DataFrame\n",
@@ -10,6 +10,32 @@
     "Es un DataFrame en paralelo compuesto por DataFrames de Pandas\n",
     "\n",
     "A continuacion se mostrata unos ejemplos de como usar ciertos métodos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77c89ecb",
+   "metadata": {},
+   "source": [
+    "Instalamos Dask con el siguiente comando"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dcab4c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install dask[complete]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "301f049d",
+   "metadata": {},
+   "source": [
+    "Importamos el modulo `dask.dataframe`"
    ]
   },
   {
@@ -26,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72e967ab",
+   "id": "72f023ea",
    "metadata": {},
    "source": [
     "A continuación se mostrará como leer un archivo parseando el formato Date de la columna **pickup_datetime**"
@@ -66,9 +92,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "908ee227",
+   "metadata": {},
+   "source": [
+    "Se pueden seleccionar las particiones o chunks en los que trabaja el dask.dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "336aeb33",
+   "id": "5606a3f6",
    "metadata": {
     "scrolled": true
    },
@@ -160,6 +194,14 @@
    ],
    "source": [
     "df.partitions[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "597d1947",
+   "metadata": {},
+   "source": [
+    "El método `compute()` muestra el dataframe en su totalidad y no solo su estructura"
    ]
   },
   {
@@ -381,6 +423,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "90d08f7b",
+   "metadata": {},
+   "source": [
+    "Así es como se puede acceder a una columna de un chunk del **dask.dataframe**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "9222c590",
@@ -417,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "6c97d84c",
+   "id": "7b3e0fe3",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "085fa317",
+   "id": "4270491c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e1c28a2",
+   "id": "71384d10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c65bf334",
+   "id": "e1dfadad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff97fb3b",
+   "id": "d50737f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "655a60dd",
+   "id": "f7c3e31a",
    "metadata": {},
    "outputs": [],
    "source": []
