--- a/EntrenandoModelo.ipynb
+++ b/EntrenandoModelo.ipynb
@@ -1,15 +1,42 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "00ea5680",
+   "metadata": {},
+   "source": [
+    "# Entrenando Modelos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "521a9aec",
+   "metadata": {},
+   "source": [
+    "Importamos los modulos a usar"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "7b04b1e5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from math import sqrt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9befeb41",
+   "metadata": {},
+   "source": [
+    "Cargamos 15 millones de filas de la data"
    ]
   },
   {
@@ -19,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('dataframe.csv')"
+    "df = pd.read_csv('dataframe.csv', nrows = 15000000)"
    ]
   },
   {
@@ -27,7 +54,7 @@
    "execution_count": 3,
    "id": "3a0eeb42",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -147,8 +174,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dea2d2ee",
+   "metadata": {},
+   "source": [
+    "Crearemos un diccionario para asiganar un \"date\" a un número"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8004076a",
    "metadata": {},
    "outputs": [],
@@ -158,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2e055de2",
    "metadata": {},
    "outputs": [],
@@ -168,10 +203,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "8d170cd8",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -357,7 +392,7 @@
        "9         40.758138                2  265.933854  09-02            9  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,9 +403,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "48760448",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -406,7 +443,7 @@
        "       364, 365], dtype=int64)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,13 +453,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4c2a834e",
+   "metadata": {},
+   "source": [
+    "Hecho esto, procedemos a seleccionar los predictores y la separación de la data para el entrenamiento y las pruebas."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "0b842bef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictors = ['passenger_count', 'distance', 'dates_mapeo']\n",
+    "predictors = ['passenger_count', 'pickup_longitude', 'pickup_latitude', 'dropoff_longitude',\n",
+    "              'dropoff_latitude', 'dates_mapeo']\n",
     "salida = 'fare_amount'\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
@@ -434,65 +480,258 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed60e2d8",
+   "metadata": {},
+   "source": [
+    "## Modelo KNeighborsRegressor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ee46aa1",
+   "metadata": {},
+   "source": [
+    "Empezamos creando el modelo y empezamos su entrenamiento"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "910026a3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "KNeighborsRegressor(n_jobs=4, n_neighbors=3, weights='distance')"
+       "KNeighborsRegressor(n_jobs=4, n_neighbors=9, weights='distance')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "knn_regre = KNeighborsRegressor(n_neighbors = 3, weights = 'distance', n_jobs = 4)\n",
+    "knn_regre = KNeighborsRegressor(n_neighbors = 9, weights = 'distance', n_jobs = 4)\n",
     "knn_regre.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "8d2be36a",
+   "execution_count": 16,
+   "id": "719a96be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "###########TRAIN###########\n",
+      "MSE 6.595238095238095e-07\n",
+      "RMSE 0.0008121107126025425\n"
+     ]
+    }
+   ],
    "source": [
-    "import joblib"
+    "train_preds = knn_regre.predict(X_train)\n",
+    "mse1 = mean_squared_error(y_train, train_preds)\n",
+    "rmse1 = sqrt(mse1)\n",
+    "print(\"###########TRAIN###########\")\n",
+    "print(\"MSE\", mse1)\n",
+    "print(\"RMSE\", rmse1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72a53354",
+   "metadata": {},
+   "source": [
+    "Calculamos el MSE y el RMSE del modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "82a7cc37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "###########TEST###########\n",
+      "MSE 20.035895930927875\n",
+      "RMSE 4.476147442938835\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_preds1 = knn_regre.predict(X_test)\n",
+    "mse2 = mean_squared_error(y_test, train_preds1)\n",
+    "rmse2 = sqrt(mse2)\n",
+    "print(\"###########TEST###########\")\n",
+    "print(\"MSE\", mse2)\n",
+    "print(\"RMSE\", rmse2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca59a1fb",
+   "metadata": {},
+   "source": [
+    "Calculamos el puntaje del modelo"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "670a9284",
+   "id": "4ea9bcc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: 0.7828028970119453\n"
+     ]
+    }
+   ],
+   "source": [
+    "score_m = knn_regre.score(X_test, y_test)\n",
+    "print(\"Score:\", score_m)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adcc3013",
+   "metadata": {},
+   "source": [
+    "# Modelo LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ed52ee5",
+   "metadata": {},
+   "source": [
+    "Creamos el modelo y empezamos su entrenamiento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "dd535ca6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['modelo_entrenado.pkl']"
+       "LinearRegression(n_jobs=-1)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump(knn_regre, 'modelo_entrenado.pkl')"
+    "clf = LinearRegression(n_jobs = -1)\n",
+    "clf.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6c549609",
+   "execution_count": 10,
+   "id": "e1eb698c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "###########TRAIN###########\n",
+      "MSE 91.59847853079197\n",
+      "RMSE 9.570709405827342\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_preds = clf.predict(X_train)\n",
+    "mse1 = mean_squared_error(y_train, train_preds)\n",
+    "rmse1 = sqrt(mse1)\n",
+    "print(\"###########TRAIN###########\")\n",
+    "print(\"MSE\", mse1)\n",
+    "print(\"RMSE\", rmse1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80d1a9b9",
+   "metadata": {},
+   "source": [
+    "Calculamos el MSE y el RMSE del modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "01f8b267",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "###########TEST###########\n",
+      "MSE 92.20325083696392\n",
+      "RMSE 9.602252383527727\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_preds1 = clf.predict(X_test)\n",
+    "mse2 = mean_squared_error(y_test, train_preds1)\n",
+    "rmse2 = sqrt(mse2)\n",
+    "print(\"###########TEST###########\")\n",
+    "print(\"MSE\", mse2)\n",
+    "print(\"RMSE\", rmse2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6716d8cb",
+   "metadata": {},
+   "source": [
+    "Calculamos el puntaje del modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7bf033ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00047998667449333787\n"
+     ]
+    }
+   ],
+   "source": [
+    "score_m = clf.score(X_test, y_test)\n",
+    "print(score_m)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec2fe6df",
+   "metadata": {},
+   "source": [
+    "Como era de esperarse, el modelo de LinearRegression no es un buen modelo para la solución de este problema."
+   ]
   }
  ],
  "metadata": {
