CArga de datos v22

--- a/Carga de datos V2.ipynb
+++ b/Carga de datos V2.ipynb
@@ -3431,13 +3431,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1fc237b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#https://github.com/jmcarpenter2/swifter\n",
+    "import swifter\n",
+    "df['pickup_datetime']=df['pickup_datetime'].swifter.apply(pd.to_datetime)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 69,
    "id": "73cb8243",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ruta = \"/IA PC2/GitHub01/Practica2/NuevoCSV.csv\"\n",
-    "df.to_csv(ruta)"
+    "ruta = \"/IA PC2/GitHub01/Practica2/NuevoCSV2.csv\"\n",
+    "df.to_csv(ruta, index=False)"
    ]
   }
  ],
