Adicion de nuevo modelo

--- a/ParteFinal.ipynb
+++ b/ParteFinal.ipynb
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3038a714",
+   "id": "5e7440f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "e392576a",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "d5975392",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
        "Length: 366, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "9d29d04f",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "a16b03a4",
    "metadata": {
     "scrolled": true
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "f0f50550",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "982465fb",
    "metadata": {},
    "outputs": [],
@@ -668,14 +668,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "82511d7e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68151571b0e04e19a6c3fe12046009f9",
+       "model_id": "a124910e3cc64a4b81484080e57fce9b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "62591689",
    "metadata": {},
    "outputs": [],
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "a184e888",
    "metadata": {},
    "outputs": [],
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "2ca2559c",
    "metadata": {},
    "outputs": [],
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "80a527a1",
    "metadata": {},
    "outputs": [],
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "6c3b4681",
    "metadata": {},
    "outputs": [],
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "dc62c781",
    "metadata": {},
    "outputs": [],
@@ -995,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "01aad033",
+   "id": "3c8a2e23",
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a7eae17",
+   "id": "8fbac14e",
    "metadata": {},
    "source": [
     "## MODELO RANDOM FOREST"
@@ -1105,7 +1105,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fe7fe9e2",
+   "id": "c9e79287",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1115,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b6528b83",
+   "id": "71577691",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "1a9e7612",
+   "id": "49b36ece",
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1147,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "bea4b241",
+   "id": "be9d2d23",
    "metadata": {},
    "outputs": [
     {
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0e075fca",
+   "id": "84ea8954",
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b07e1077",
+   "id": "985aec26",
    "metadata": {},
    "source": [
     "## MODELO REGRESION LINEAL MULTIPLE"
@@ -1208,7 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e9bcc2bf",
+   "id": "d956c198",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "476ab343",
+   "id": "35a4b526",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "e7d8f4fe",
+   "id": "afd38811",
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1249,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "16cef896",
+   "id": "47caf442",
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "532f90b7",
+   "id": "3261c70a",
    "metadata": {},
    "outputs": [
     {
@@ -1304,14 +1304,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38c28d2c",
+   "id": "7a95f439",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "cd4fb408",
+   "id": "e2fa3bad",
    "metadata": {},
    "source": [
     "## Gradient Boost regression"
@@ -1320,7 +1320,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ddffc08c",
+   "id": "0e402e66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1330,7 +1330,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a177451e",
+   "id": "8d7f00c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1341,7 +1341,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "caf49f6a",
+   "id": "bb56f5fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1354,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "94a9c94d",
+   "id": "282981a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1364,7 +1364,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "2786b2e2",
+   "id": "9ce57c1c",
    "metadata": {},
    "outputs": [
     {
@@ -1391,8 +1391,10 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "d79590d3",
-   "metadata": {},
+   "id": "3a51b203",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1414,6 +1416,100 @@
     "print('Error RMSE:',rmse_lrm2)\n",
     "print('Score:',gbr_model.score(X_test, y_test))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b984cb15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import BaggingRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "92c2c6a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regr = BaggingRegressor(base_estimator=DecisionTreeRegressor(random_state=42),\n",
+    "                        n_estimators=10, random_state=150, n_jobs=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "665e3039",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regr_model = regr.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "9bd12d27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "###### Test group #########\n",
+      "Error MSE: 4.226755423777666\n",
+      "Error RMSE: 2.0559074453334873\n",
+      "Score: 0.9540502556833033\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_preds_br = regr_model.predict(X_train)\n",
+    "mse_gr = mean_squared_error(y_train, train_preds_br)\n",
+    "rmse_gr = sqrt(mse_gr)\n",
+    "print('###### Test group #########')\n",
+    "print('Error MSE:',mse_gr)\n",
+    "print('Error RMSE:',rmse_gr)\n",
+    "print('Score:',regr_model.score(X_train, y_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "be0bc7c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "###### Test group #########\n",
+      "Error MSE: 23.69760388866737\n",
+      "Error RMSE: 4.868018476615241\n",
+      "Score: 0.7408523762469346\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_preds_br = regr_model.predict(X_test)\n",
+    "mse_gr = mean_squared_error(y_test, test_preds_br)\n",
+    "rmse_gr = sqrt(mse_gr)\n",
+    "print('###### Test group #########')\n",
+    "print('Error MSE:',mse_gr)\n",
+    "print('Error RMSE:',rmse_gr)\n",
+    "print('Score:',regr_model.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "134d25a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
